fixed left menu - but its too high uggh

--- a/global.css
+++ b/global.css
@@ -36,7 +36,7 @@ body{
 #lisidebar{
   list-style: none;
   font-size: 23px;
-  line-height: 50px;
+  line-height: 5vh;
 }
 
 #heading{
@@ -95,7 +95,7 @@ body{
 
 #divlinks{
   bottom: 0;
-  padding-top: 90px;
+  padding-top: 7vh;
 }
 
 #link{
